
noinst_PROGRAMS  =
noinst_LIBRARIES = libixml.a

libixml_a_SOURCES = \
	src/ixml.c \
	src/node.c \
	src/ixmlparser.c \
	src/ixmlmembuf.c \
	src/nodeList.c \
	src/element.c \
	src/attr.c \
	src/document.c \
	src/namedNodeMap.c \
	src/inc/ixmlmembuf.h \
	src/inc/ixmlparser.h

libixml_a_CFLAGS = \
	-Wall \
	-I$(top_srcdir)/ixml/inc \
	-I$(top_srcdir)/ixml/src/inc
